refactor(core): Java 21 Collection API 적용 (getFirst/getLast)